# PlantWateringDevice

./: .gitattributes  .gitignore  README.md  docker-compose.yml
.github/workflows/: build-docker.yml  formal-verification.yml  simulation.yml  unit-tests.yml
DevOps/: Dockerfile  README.md
Documentation/Diagrams/: ActivityDiagram.plantuml
Hardware/: .gitignore  README.md
Hardware/PlantWateringDevice/: .gitignore  DataHandling.kicad_sch  Display.kicad_sch  HumiditySensor.kicad_sch  InMUX.kicad_sch  Mechanic.kicad_sch  OutMUX.kicad_sch  PlantWateringDevice.kicad_pcb  PlantWateringDevice.kicad_pro  PlantWateringDevice.kicad_sch  PlantWateringDevice.kicad_sym  PowerManagement.kicad_sch  README.md  fp-lib-table  sym-lib-table
Hardware/PlantWateringDevice/PlantWateringDevice.pretty/: SDR1006-330KL.kicad_mod  SegmentDisplayMounting.kicad_mod  USB_Micro-B_Molex-105017-0001_Extra_Mechanical_Pads.kicad_mod
Mechanic/: .gitignore  PumpHolder.FCStd  README.md
Mechanic/FreeCAD/: BottomHolder.FCStd
Mechanic/OpenSCAD/: ConnectorCutout.scad  Constants.scad  Display.scad  Main.scad  Merge.py  MountingBoard.scad  Potentiometer.scad  PumpHolder.scad  ZipTieBracket.scad
Simulation/: README.md  do_it.sh  index.html  justfile  meson.build  plant-watering.css
Simulation/css/: display.css  graph.css  main.css
Simulation/js/: app.js  gpio.js  graph.js  logging.js  simulation.js  state.js  ui.js  wasm-loader.js
Simulation/live/: index.html
Simulation/live/PIC10F202 Plant Watering Simulator_files/: app.bundle.js.download  plant-watering.js.download
Simulation/ts/: app.ts  gpio.ts  graph.ts  logging.ts  simulation.ts  state.ts  ui.ts
Software/: .gitignore  README.md  gpio_mapping.h  hal.c  hal.h  justfile  logger.h  main.c  meson.build  plant-watering.html  watering.c  watering.h
Software/PlantWateringDevice.X/: main.s
Software/PlantWateringDevice.X/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-impl.mk  Makefile-variables.mk  configurations.xml  project.xml
Software/PlantWateringDevice.X/tests/: 01_GPO0_GP2.asm  README.md
Software/nbproject/: configurations.xml  project.xml
Software/simulation/: xc.c  xc.h
Software/tests/: test_display.c  test_handle_button.c  test_handle_sensor_check.c  test_initialize.c  test_pump.c  test_update_pump_duration.c
Software/tests/stubs/: xc.c  xc.h
Sofware/: README.md
t2/: PIC10F202 Plant Watering Simulator.html
t2/PIC10F202 Plant Watering Simulator_files/: display.css  graph.css  main.css  plant-watering.js.download
